2004-01-25  TAMUKI Shoichi <tamuki@linet.gr.jp>

	* doc/C/timidity.1, doc/ja_JP.ujis/timidity.1:
	  Update man page of timidity.1
	  TODO: Translate some new items into English
	* timidity/timidity.c (parse_opt_h): Fix typo

2004-01-25  Kentaro Sato <kentaro@ranvis.com>

	* timidity/playmidi.c, timidity/readmidi.c: Fixed channel layer.

2004-01-24  Kentaro Sato <kentaro@ranvis.com>

	* timidity/playmidi.c: Fixed event filtering.
	* timidity/timidity.c: Added tone->rnddelay (re)initialization.

2004-01-22  TAMUKI Shoichi <tamuki@linet.gr.jp>

	* doc/C/timidity.cfg.5, doc/ja_JP.ujis/timidity.cfg.5: Fix typo

2004-01-22  mput <root@mput.dip.jp>

	* doc/C/timidity.cfg.5: update to fit with ranvis' patch
	* doc/ja_JP.ujis/timidity.cfg.5: ditto

2004-01-22  Kentaro Sato <kentaro@ranvis.com>

	* timidity/instrum.h, timidity/playmidi.c,
	  timidity/readmidi.c, timidity/timidity.c:
	  Removed GM2 default MSB support.	
	  Added new map 'gm2[drum]' (GM2) and 'sc8850[drum]' (GS LSB=4).
	  Note that although GS LSB=4 indicates both SC-8820 and SC-8850
	  and they're mapped identically, waveforms in the actual
	  hardwares differ.

2004-01-21  mput <root@mput.dip.jp>

	* doc/ja_JP.ujis/timidity.cfg.5: sorry, I was confusing. revert.
	* doc/C/timidity.cfg.5: fix typo

2004-01-21  mput <root@mput.dip.jp>

	* doc/ja_JP.ujis/timidity.cfg.5:
	  Was written in eucJP, convert to iso-2022-jp
	* doc/C/timidity.cfg.5: Bug fix.

2004-01-21  TAMUKI Shoichi <tamuki@linet.gr.jp>

	* doc/C/timidity.cfg.5, doc/ja_JP.ujis/timidity.cfg.5:
	  Update man page of timidity.cfg.5

2004-01-21  Kentaro Sato <kentaro@ranvis.com>

	* timidity/aiff_a.c, common.c, mac_a.c, mac_main.c, mac_qt_a.c,
	  mac_soundspec.c, mac_util.c, recache.c, wrd_read.c,
	  interface/mac_c.c, mac_mag.c, mac_wrdwindow.c, wrdt_mac.c,
	  libarc/arc_mime.c:
	  Updated Mac interface to compile.

2004-01-20  Kentaro Sato <kentaro@ranvis.com>

	* interface/dumb_c.c, timidity/playmidi.c, timidity/sndfont.c: